--- a/horus/horus-fw.ioc
+++ b/horus/horus-fw.ioc
@@ -15,18 +15,22 @@ Mcu.Name=STM32F401R(B-C)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=VP_RTC_VS_RTC_Activate
-Mcu.Pin11=VP_RTC_VS_RTC_Calendar
-Mcu.Pin12=VP_SYS_VS_Systick
+Mcu.Pin10=PA8
+Mcu.Pin11=PA13
+Mcu.Pin12=PA14
+Mcu.Pin13=PB3
+Mcu.Pin14=VP_RTC_VS_RTC_Activate
+Mcu.Pin15=VP_RTC_VS_RTC_Calendar
+Mcu.Pin16=VP_SYS_VS_Systick
 Mcu.Pin2=PC15-OSC32_OUT
 Mcu.Pin3=PH0 - OSC_IN
 Mcu.Pin4=PH1 - OSC_OUT
 Mcu.Pin5=PB2
-Mcu.Pin6=PA8
-Mcu.Pin7=PA13
-Mcu.Pin8=PA14
-Mcu.Pin9=PB3
-Mcu.PinsNb=13
+Mcu.Pin6=PB12
+Mcu.Pin7=PB13
+Mcu.Pin8=PB14
+Mcu.Pin9=PB15
+Mcu.PinsNb=17
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F401RCTx
@@ -58,6 +62,22 @@ PA8.GPIO_Label=MCO
 PA8.Locked=true
 PA8.Mode=Clock-out-1
 PA8.Signal=RCC_MCO_1
+PB12.GPIOParameters=GPIO_Label
+PB12.GPIO_Label=ActDa
+PB12.Locked=true
+PB12.Signal=GPIO_Output
+PB13.GPIOParameters=GPIO_Label
+PB13.GPIO_Label=ActLa
+PB13.Locked=true
+PB13.Signal=GPIO_Output
+PB14.GPIOParameters=GPIO_Label
+PB14.GPIO_Label=ActCk
+PB14.Locked=true
+PB14.Signal=GPIO_Output
+PB15.GPIOParameters=GPIO_Label
+PB15.GPIO_Label=ActLd
+PB15.Locked=true
+PB15.Signal=GPIO_Output
 PB2.GPIOParameters=GPIO_Label
 PB2.GPIO_Label=Boot1
 PB2.Locked=true
@@ -123,7 +143,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_RTC_Init-RTC-false-HAL-true
 RCC.48MHZClocksFreq_Value=42000000
 RCC.AHBFreq_Value=16000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
