--- a/horus/horus-fw.ioc
+++ b/horus/horus-fw.ioc
@@ -43,11 +43,12 @@ Mcu.CPN=STM32F401RCT6
 Mcu.Family=STM32F4
 Mcu.IP0=ADC1
 Mcu.IP1=DMA
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=RTC
-Mcu.IP5=SYS
-Mcu.IPNb=6
+Mcu.IP2=I2C1
+Mcu.IP3=NVIC
+Mcu.IP4=RCC
+Mcu.IP5=RTC
+Mcu.IP6=SYS
+Mcu.IPNb=7
 Mcu.Name=STM32F401R(B-C)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
@@ -63,11 +64,13 @@ Mcu.Pin17=PA13
 Mcu.Pin18=PA14
 Mcu.Pin19=PB3
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=VP_ADC1_TempSens_Input
-Mcu.Pin21=VP_ADC1_Vref_Input
-Mcu.Pin22=VP_RTC_VS_RTC_Activate
-Mcu.Pin23=VP_RTC_VS_RTC_Calendar
-Mcu.Pin24=VP_SYS_VS_Systick
+Mcu.Pin20=PB6
+Mcu.Pin21=PB7
+Mcu.Pin22=VP_ADC1_TempSens_Input
+Mcu.Pin23=VP_ADC1_Vref_Input
+Mcu.Pin24=VP_RTC_VS_RTC_Activate
+Mcu.Pin25=VP_RTC_VS_RTC_Calendar
+Mcu.Pin26=VP_SYS_VS_Systick
 Mcu.Pin3=PH0 - OSC_IN
 Mcu.Pin4=PH1 - OSC_OUT
 Mcu.Pin5=PA0-WKUP
@@ -75,7 +78,7 @@ Mcu.Pin6=PA1
 Mcu.Pin7=PA2
 Mcu.Pin8=PC5
 Mcu.Pin9=PB0
-Mcu.PinsNb=25
+Mcu.PinsNb=27
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F401RCTx
@@ -153,6 +156,12 @@ PB3.GPIO_Label=SWO
 PB3.Locked=true
 PB3.Mode=Trace_Asynchronous_SW
 PB3.Signal=SYS_JTDO-SWO
+PB6.Locked=true
+PB6.Mode=I2C
+PB6.Signal=I2C1_SCL
+PB7.Locked=true
+PB7.Mode=I2C
+PB7.Signal=I2C1_SDA
 PC13-ANTI_TAMP.GPIOParameters=GPIO_Label
 PC13-ANTI_TAMP.GPIO_Label=Tamper
 PC13-ANTI_TAMP.Locked=true
