--- a/horus/horus-fw.ioc
+++ b/horus/horus-fw.ioc
@@ -36,49 +36,112 @@ Dma.ADC1.0.PeriphInc=DMA_PINC_DISABLE
 Dma.ADC1.0.Priority=DMA_PRIORITY_LOW
 Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 Dma.Request0=ADC1
-Dma.RequestsNb=1
+Dma.Request1=SDIO_RX
+Dma.Request2=SDIO_TX
+Dma.RequestsNb=3
+Dma.SDIO_RX.1.Direction=DMA_PERIPH_TO_MEMORY
+Dma.SDIO_RX.1.FIFOMode=DMA_FIFOMODE_ENABLE
+Dma.SDIO_RX.1.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
+Dma.SDIO_RX.1.Instance=DMA2_Stream3
+Dma.SDIO_RX.1.MemBurst=DMA_MBURST_INC4
+Dma.SDIO_RX.1.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.SDIO_RX.1.MemInc=DMA_MINC_ENABLE
+Dma.SDIO_RX.1.Mode=DMA_PFCTRL
+Dma.SDIO_RX.1.PeriphBurst=DMA_PBURST_INC4
+Dma.SDIO_RX.1.PeriphDataAlignment=DMA_PDATAALIGN_WORD
+Dma.SDIO_RX.1.PeriphInc=DMA_PINC_DISABLE
+Dma.SDIO_RX.1.Priority=DMA_PRIORITY_LOW
+Dma.SDIO_RX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
+Dma.SDIO_TX.2.Direction=DMA_MEMORY_TO_PERIPH
+Dma.SDIO_TX.2.FIFOMode=DMA_FIFOMODE_ENABLE
+Dma.SDIO_TX.2.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
+Dma.SDIO_TX.2.Instance=DMA2_Stream6
+Dma.SDIO_TX.2.MemBurst=DMA_MBURST_INC4
+Dma.SDIO_TX.2.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.SDIO_TX.2.MemInc=DMA_MINC_ENABLE
+Dma.SDIO_TX.2.Mode=DMA_PFCTRL
+Dma.SDIO_TX.2.PeriphBurst=DMA_PBURST_INC4
+Dma.SDIO_TX.2.PeriphDataAlignment=DMA_PDATAALIGN_WORD
+Dma.SDIO_TX.2.PeriphInc=DMA_PINC_DISABLE
+Dma.SDIO_TX.2.Priority=DMA_PRIORITY_LOW
+Dma.SDIO_TX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
+FATFS.BSP.number=1
+FATFS.IPParameters=USE_DMA_CODE_SD,_USE_LFN,_USE_LABEL,_USE_EXPAND,_USE_FIND,_MAX_SS,_FS_EXFAT
+FATFS.USE_DMA_CODE_SD=1
+FATFS._FS_EXFAT=1
+FATFS._MAX_SS=4096
+FATFS._USE_EXPAND=1
+FATFS._USE_FIND=1
+FATFS._USE_LABEL=1
+FATFS._USE_LFN=1
+FATFS0.BSP.STBoard=false
+FATFS0.BSP.api=Unknown
+FATFS0.BSP.component=
+FATFS0.BSP.condition=
+FATFS0.BSP.instance=PA15
+FATFS0.BSP.ip=GPIO
+FATFS0.BSP.mode=Input
+FATFS0.BSP.name=Detect_SDIO
+FATFS0.BSP.semaphore=
+FATFS0.BSP.solution=PA15
 File.Version=6
 KeepUserPlacement=false
 Mcu.CPN=STM32F401RCT6
 Mcu.Family=STM32F4
 Mcu.IP0=ADC1
 Mcu.IP1=DMA
-Mcu.IP2=I2C1
-Mcu.IP3=NVIC
-Mcu.IP4=RCC
-Mcu.IP5=RTC
-Mcu.IP6=SYS
-Mcu.IPNb=7
+Mcu.IP2=FATFS
+Mcu.IP3=I2C1
+Mcu.IP4=NVIC
+Mcu.IP5=RCC
+Mcu.IP6=RTC
+Mcu.IP7=SDIO
+Mcu.IP8=SPI1
+Mcu.IP9=SYS
+Mcu.IPNb=10
 Mcu.Name=STM32F401R(B-C)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PB1
-Mcu.Pin11=PB2
-Mcu.Pin12=PB12
-Mcu.Pin13=PB13
-Mcu.Pin14=PB14
-Mcu.Pin15=PB15
-Mcu.Pin16=PA8
-Mcu.Pin17=PA13
-Mcu.Pin18=PA14
-Mcu.Pin19=PB3
+Mcu.Pin10=PA5
+Mcu.Pin11=PA6
+Mcu.Pin12=PA7
+Mcu.Pin13=PC5
+Mcu.Pin14=PB0
+Mcu.Pin15=PB1
+Mcu.Pin16=PB2
+Mcu.Pin17=PB12
+Mcu.Pin18=PB13
+Mcu.Pin19=PB14
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=PB6
-Mcu.Pin21=PB7
-Mcu.Pin22=VP_ADC1_TempSens_Input
-Mcu.Pin23=VP_ADC1_Vref_Input
-Mcu.Pin24=VP_RTC_VS_RTC_Activate
-Mcu.Pin25=VP_RTC_VS_RTC_Calendar
-Mcu.Pin26=VP_SYS_VS_Systick
+Mcu.Pin20=PB15
+Mcu.Pin21=PC8
+Mcu.Pin22=PC9
+Mcu.Pin23=PA8
+Mcu.Pin24=PA13
+Mcu.Pin25=PA14
+Mcu.Pin26=PA15
+Mcu.Pin27=PC10
+Mcu.Pin28=PC11
+Mcu.Pin29=PC12
 Mcu.Pin3=PH0 - OSC_IN
+Mcu.Pin30=PD2
+Mcu.Pin31=PB3
+Mcu.Pin32=PB6
+Mcu.Pin33=PB7
+Mcu.Pin34=VP_ADC1_TempSens_Input
+Mcu.Pin35=VP_ADC1_Vref_Input
+Mcu.Pin36=VP_FATFS_VS_SDIO
+Mcu.Pin37=VP_RTC_VS_RTC_Activate
+Mcu.Pin38=VP_RTC_VS_RTC_Calendar
+Mcu.Pin39=VP_SYS_VS_Systick
 Mcu.Pin4=PH1 - OSC_OUT
 Mcu.Pin5=PA0-WKUP
 Mcu.Pin6=PA1
 Mcu.Pin7=PA2
-Mcu.Pin8=PC5
-Mcu.Pin9=PB0
-Mcu.PinsNb=27
+Mcu.Pin8=PA3
+Mcu.Pin9=PA4
+Mcu.PinsNb=40
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F401RCTx
@@ -86,6 +149,8 @@ MxCube.Version=6.12.0
 MxDb.Version=DB.6.0.120
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DMA2_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DMA2_Stream3_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DMA2_Stream6_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -93,6 +158,8 @@ NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
+NVIC.SDIO_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.SPI1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -114,10 +181,37 @@ PA14.GPIO_Label=SWCk
 PA14.Locked=true
 PA14.Mode=Trace_Asynchronous_SW
 PA14.Signal=SYS_JTCK-SWCLK
+PA15.GPIOParameters=GPIO_Label
+PA15.GPIO_Label=SDIO_DET
+PA15.Locked=true
+PA15.Signal=GPIO_Input
 PA2.GPIOParameters=GPIO_Label
 PA2.GPIO_Label=Av1Ld
 PA2.Locked=true
 PA2.Signal=GPIO_Output
+PA3.GPIOParameters=GPIO_Label
+PA3.GPIO_Label=EEPROM_CS
+PA3.Locked=true
+PA3.Signal=GPIO_Output
+PA4.GPIOParameters=GPIO_Label
+PA4.GPIO_Label=SPI_CS
+PA4.Locked=true
+PA4.Signal=GPIO_Output
+PA5.GPIOParameters=GPIO_Label
+PA5.GPIO_Label=SPI_CK
+PA5.Locked=true
+PA5.Mode=Full_Duplex_Master
+PA5.Signal=SPI1_SCK
+PA6.GPIOParameters=GPIO_Label
+PA6.GPIO_Label=SPI_MISO
+PA6.Locked=true
+PA6.Mode=Full_Duplex_Master
+PA6.Signal=SPI1_MISO
+PA7.GPIOParameters=GPIO_Label
+PA7.GPIO_Label=SPI_MOSI
+PA7.Locked=true
+PA7.Mode=Full_Duplex_Master
+PA7.Signal=SPI1_MOSI
 PA8.GPIOParameters=GPIO_Label
 PA8.GPIO_Label=MCO
 PA8.Locked=true
@@ -162,6 +256,12 @@ PB6.Signal=I2C1_SCL
 PB7.Locked=true
 PB7.Mode=I2C
 PB7.Signal=I2C1_SDA
+PC10.Mode=SD_4_bits_Wide_bus
+PC10.Signal=SDIO_D2
+PC11.Mode=SD_4_bits_Wide_bus
+PC11.Signal=SDIO_D3
+PC12.Mode=SD_4_bits_Wide_bus
+PC12.Signal=SDIO_CK
 PC13-ANTI_TAMP.GPIOParameters=GPIO_Label
 PC13-ANTI_TAMP.GPIO_Label=Tamper
 PC13-ANTI_TAMP.Locked=true
@@ -181,6 +281,12 @@ PC5.GPIOParameters=GPIO_Label
 PC5.GPIO_Label=Av1
 PC5.Locked=true
 PC5.Signal=ADCx_IN15
+PC8.Mode=SD_4_bits_Wide_bus
+PC8.Signal=SDIO_D0
+PC9.Mode=SD_4_bits_Wide_bus
+PC9.Signal=SDIO_D1
+PD2.Mode=SD_4_bits_Wide_bus
+PD2.Signal=SDIO_CMD
 PH0\ -\ OSC_IN.GPIOParameters=GPIO_Label
 PH0\ -\ OSC_IN.GPIO_Label=HSEin
 PH0\ -\ OSC_IN.Locked=true
@@ -222,7 +328,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_RTC_Init-RTC-false-HAL-true,5-MX_ADC1_Init-ADC1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_RTC_Init-RTC-false-HAL-true,5-MX_ADC1_Init-ADC1-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true,7-MX_SDIO_SD_Init-SDIO-false-HAL-true,8-MX_FATFS_Init-FATFS-false-HAL-false,9-MX_SPI1_Init-SPI1-false-HAL-true
 RCC.48MHZClocksFreq_Value=42000000
 RCC.AHBFreq_Value=84000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -256,16 +362,27 @@ RCC.VCOOutputFreq_Value=168000000
 RCC.VcooutputI2S=192000000
 RTC.IPParameters=PinSelection_1
 RTC.PinSelection_1=RTC_TAMPERPIN_DEFAULT
+SDIO.ClockPowerSave=SDIO_CLOCK_POWER_SAVE_ENABLE
+SDIO.IPParameters=ClockPowerSave
 SH.ADCx_IN15.0=ADC1_IN15,IN15
 SH.ADCx_IN15.ConfNb=1
 SH.ADCx_IN8.0=ADC1_IN8,IN8
 SH.ADCx_IN8.ConfNb=1
 SH.ADCx_IN9.0=ADC1_IN9,IN9
 SH.ADCx_IN9.ConfNb=1
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_256
+SPI1.CalculateBaudRate=328.125 KBits/s
+SPI1.DataSize=SPI_DATASIZE_8BIT
+SPI1.Direction=SPI_DIRECTION_2LINES
+SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler
+SPI1.Mode=SPI_MODE_MASTER
+SPI1.VirtualType=VM_MASTER
 VP_ADC1_TempSens_Input.Mode=IN-TempSens
 VP_ADC1_TempSens_Input.Signal=ADC1_TempSens_Input
 VP_ADC1_Vref_Input.Mode=IN-Vrefint
 VP_ADC1_Vref_Input.Signal=ADC1_Vref_Input
+VP_FATFS_VS_SDIO.Mode=SDIO
+VP_FATFS_VS_SDIO.Signal=FATFS_VS_SDIO
 VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
 VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
 VP_RTC_VS_RTC_Calendar.Mode=RTC_Calendar
