[HORUS] Some code refactor

--- a/horus/horus-fw.ioc
+++ b/horus/horus-fw.ioc
@@ -134,14 +134,16 @@ Mcu.Pin35=VP_ADC1_Vref_Input
 Mcu.Pin36=VP_FATFS_VS_SDIO
 Mcu.Pin37=VP_RTC_VS_RTC_Activate
 Mcu.Pin38=VP_RTC_VS_RTC_Calendar
-Mcu.Pin39=VP_SYS_VS_Systick
+Mcu.Pin39=VP_RTC_VS_RTC_Alarm_B_Intern
 Mcu.Pin4=PH1 - OSC_OUT
+Mcu.Pin40=VP_RTC_VS_RTC_Alarm_A_Intern
+Mcu.Pin41=VP_SYS_VS_Systick
 Mcu.Pin5=PA0-WKUP
 Mcu.Pin6=PA1
 Mcu.Pin7=PA2
 Mcu.Pin8=PA3
 Mcu.Pin9=PA4
-Mcu.PinsNb=40
+Mcu.PinsNb=42
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F401RCTx
@@ -360,7 +362,9 @@ RCC.VCOI2SOutputFreq_Value=384000000
 RCC.VCOInputFreq_Value=2000000
 RCC.VCOOutputFreq_Value=168000000
 RCC.VcooutputI2S=192000000
-RTC.IPParameters=PinSelection_1
+RTC.Alarm=RTC_ALARM_A
+RTC.Alarm_B=RTC_ALARM_B
+RTC.IPParameters=PinSelection_1,Alarm,Alarm_B
 RTC.PinSelection_1=RTC_TAMPERPIN_DEFAULT
 SDIO.ClockPowerSave=SDIO_CLOCK_POWER_SAVE_ENABLE
 SDIO.IPParameters=ClockPowerSave
@@ -385,6 +389,10 @@ VP_FATFS_VS_SDIO.Mode=SDIO
 VP_FATFS_VS_SDIO.Signal=FATFS_VS_SDIO
 VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
 VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
+VP_RTC_VS_RTC_Alarm_A_Intern.Mode=Alarm A
+VP_RTC_VS_RTC_Alarm_A_Intern.Signal=RTC_VS_RTC_Alarm_A_Intern
+VP_RTC_VS_RTC_Alarm_B_Intern.Mode=Alarm B
+VP_RTC_VS_RTC_Alarm_B_Intern.Signal=RTC_VS_RTC_Alarm_B_Intern
 VP_RTC_VS_RTC_Calendar.Mode=RTC_Calendar
 VP_RTC_VS_RTC_Calendar.Signal=RTC_VS_RTC_Calendar
 VP_SYS_VS_Systick.Mode=SysTick
