Indicators and Timers

--- a/horus/horus-fw.ioc
+++ b/horus/horus-fw.ioc
@@ -147,14 +147,16 @@ Mcu.Pin44=VP_RTC_VS_RTC_Alarm_B_Intern
 Mcu.Pin45=VP_RTC_VS_RTC_Alarm_A_Intern
 Mcu.Pin46=VP_SYS_VS_Systick
 Mcu.Pin47=VP_TIM4_VS_ClockSourceINT
-Mcu.Pin48=VP_TIM5_VS_ClockSourceINT
-Mcu.Pin49=VP_TIM9_VS_ClockSourceINT
+Mcu.Pin48=VP_TIM4_VS_no_output1
+Mcu.Pin49=VP_TIM5_VS_ClockSourceINT
 Mcu.Pin5=PC0
+Mcu.Pin50=VP_TIM9_VS_ClockSourceINT
+Mcu.Pin51=VP_TIM9_VS_no_output1
 Mcu.Pin6=PC1
 Mcu.Pin7=PC2
 Mcu.Pin8=PC3
 Mcu.Pin9=PA0-WKUP
-Mcu.PinsNb=50
+Mcu.PinsNb=52
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F401RCTx
@@ -175,13 +177,16 @@ NVIC.SDIO_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.SPI1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
+NVIC.TIM1_BRK_TIM9_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM4_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM5_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0-WKUP.GPIOParameters=GPIO_Label
-PA0-WKUP.GPIO_Label=Av3Ind
+PA0-WKUP.GPIO_Label=Av3Indicator
 PA0-WKUP.Locked=true
 PA0-WKUP.Signal=GPIO_Output
 PA1.GPIOParameters=GPIO_Label
-PA1.GPIO_Label=Av2Ind
+PA1.GPIO_Label=Av2Indicator
 PA1.Locked=true
 PA1.Signal=GPIO_Output
 PA13.GPIOParameters=GPIO_Label
@@ -199,7 +204,7 @@ PA15.GPIO_Label=SDIO_DET
 PA15.Locked=true
 PA15.Signal=GPIO_Input
 PA2.GPIOParameters=GPIO_Label
-PA2.GPIO_Label=Av1Ind
+PA2.GPIO_Label=Av1Indicator
 PA2.Locked=true
 PA2.Signal=GPIO_Output
 PA3.GPIOParameters=GPIO_Label
@@ -361,7 +366,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_RTC_Init-RTC-false-HAL-true,5-MX_ADC1_Init-ADC1-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true,7-MX_SDIO_SD_Init-SDIO-false-HAL-true,8-MX_FATFS_Init-FATFS-false-HAL-false,9-MX_SPI1_Init-SPI1-false-HAL-true,10-MX_TIM3_Init-TIM3-false-HAL-true,11-MX_TIM4_Init-TIM4-false-HAL-true,12-MX_TIM5_Init-TIM5-false-HAL-true,13-MX_TIM9_Init-TIM9-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_RTC_Init-RTC-false-HAL-true,5-MX_ADC1_Init-ADC1-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true,7-MX_SDIO_SD_Init-SDIO-false-HAL-true,8-MX_FATFS_Init-FATFS-false-HAL-false,9-MX_SPI1_Init-SPI1-false-HAL-true,10-MX_TIM4_Init-TIM4-false-HAL-true,11-MX_TIM5_Init-TIM5-false-HAL-true,12-MX_TIM9_Init-TIM9-false-HAL-true
 RCC.48MHZClocksFreq_Value=42000000
 RCC.AHBFreq_Value=84000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -413,16 +418,23 @@ SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRate
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
 TIM4.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
-TIM4.IPParameters=Prescaler,Period,AutoReloadPreload
+TIM4.Channel-Output\ Compare1\ No\ Output=TIM_CHANNEL_1
+TIM4.IPParameters=Prescaler,Period,AutoReloadPreload,Channel-Output Compare1 No Output,OCMode_1,Pulse-Output Compare1 No Output
+TIM4.OCMode_1=TIM_OCMODE_TOGGLE
 TIM4.Period=1000 - 1
 TIM4.Prescaler=8400 - 1
+TIM4.Pulse-Output\ Compare1\ No\ Output=1000-1
 TIM5.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM5.IPParameters=Prescaler,Period,AutoReloadPreload
 TIM5.Period=100000 - 1
 TIM5.Prescaler=8400 - 1
-TIM9.IPParameters=Prescaler,Period
+TIM9.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM9.Channel-Output\ Compare1\ No\ Output=TIM_CHANNEL_1
+TIM9.IPParameters=Prescaler,Period,Channel-Output Compare1 No Output,Pulse-Output Compare1 No Output,OCMode_1,AutoReloadPreload
+TIM9.OCMode_1=TIM_OCMODE_TOGGLE
 TIM9.Period=10000 - 1
 TIM9.Prescaler=8400 - 1
+TIM9.Pulse-Output\ Compare1\ No\ Output=10000 - 1
 VP_ADC1_TempSens_Input.Mode=IN-TempSens
 VP_ADC1_TempSens_Input.Signal=ADC1_TempSens_Input
 VP_ADC1_Vref_Input.Mode=IN-Vrefint
@@ -441,9 +453,13 @@ VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM4_VS_ClockSourceINT.Mode=Internal
 VP_TIM4_VS_ClockSourceINT.Signal=TIM4_VS_ClockSourceINT
+VP_TIM4_VS_no_output1.Mode=Output Compare1 No Output
+VP_TIM4_VS_no_output1.Signal=TIM4_VS_no_output1
 VP_TIM5_VS_ClockSourceINT.Mode=Internal
 VP_TIM5_VS_ClockSourceINT.Signal=TIM5_VS_ClockSourceINT
 VP_TIM9_VS_ClockSourceINT.Mode=Internal
 VP_TIM9_VS_ClockSourceINT.Signal=TIM9_VS_ClockSourceINT
+VP_TIM9_VS_no_output1.Mode=Output Compare1 No Output
+VP_TIM9_VS_no_output1.Signal=TIM9_VS_no_output1
 board=custom
 isbadioc=false
