--- a/horus/horus-fw.ioc
+++ b/horus/horus-fw.ioc
@@ -90,6 +90,9 @@ Mcu.CPN=STM32F401RCT6
 Mcu.Family=STM32F4
 Mcu.IP0=ADC1
 Mcu.IP1=DMA
+Mcu.IP10=TIM4
+Mcu.IP11=TIM5
+Mcu.IP12=TIM9
 Mcu.IP2=FATFS
 Mcu.IP3=I2C1
 Mcu.IP4=NVIC
@@ -98,52 +101,62 @@ Mcu.IP6=RTC
 Mcu.IP7=SDIO
 Mcu.IP8=SPI1
 Mcu.IP9=SYS
-Mcu.IPNb=10
+Mcu.IPNb=13
 Mcu.Name=STM32F401R(B-C)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PA5
-Mcu.Pin11=PA6
-Mcu.Pin12=PA7
-Mcu.Pin13=PC5
-Mcu.Pin14=PB0
-Mcu.Pin15=PB1
-Mcu.Pin16=PB2
-Mcu.Pin17=PB12
-Mcu.Pin18=PB13
-Mcu.Pin19=PB14
+Mcu.Pin10=PA1
+Mcu.Pin11=PA2
+Mcu.Pin12=PA3
+Mcu.Pin13=PA4
+Mcu.Pin14=PA5
+Mcu.Pin15=PA6
+Mcu.Pin16=PA7
+Mcu.Pin17=PC5
+Mcu.Pin18=PB0
+Mcu.Pin19=PB1
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=PB15
-Mcu.Pin21=PC8
-Mcu.Pin22=PC9
-Mcu.Pin23=PA8
-Mcu.Pin24=PA13
-Mcu.Pin25=PA14
-Mcu.Pin26=PA15
-Mcu.Pin27=PC10
-Mcu.Pin28=PC11
-Mcu.Pin29=PC12
+Mcu.Pin20=PB2
+Mcu.Pin21=PB10
+Mcu.Pin22=PB12
+Mcu.Pin23=PB13
+Mcu.Pin24=PB14
+Mcu.Pin25=PB15
+Mcu.Pin26=PC8
+Mcu.Pin27=PC9
+Mcu.Pin28=PA8
+Mcu.Pin29=PA13
 Mcu.Pin3=PH0 - OSC_IN
-Mcu.Pin30=PD2
-Mcu.Pin31=PB3
-Mcu.Pin32=PB6
-Mcu.Pin33=PB7
-Mcu.Pin34=VP_ADC1_TempSens_Input
-Mcu.Pin35=VP_ADC1_Vref_Input
-Mcu.Pin36=VP_FATFS_VS_SDIO
-Mcu.Pin37=VP_RTC_VS_RTC_Activate
-Mcu.Pin38=VP_RTC_VS_RTC_Calendar
-Mcu.Pin39=VP_RTC_VS_RTC_Alarm_B_Intern
+Mcu.Pin30=PA14
+Mcu.Pin31=PA15
+Mcu.Pin32=PC10
+Mcu.Pin33=PC11
+Mcu.Pin34=PC12
+Mcu.Pin35=PD2
+Mcu.Pin36=PB3
+Mcu.Pin37=PB6
+Mcu.Pin38=PB7
+Mcu.Pin39=VP_ADC1_TempSens_Input
 Mcu.Pin4=PH1 - OSC_OUT
-Mcu.Pin40=VP_RTC_VS_RTC_Alarm_A_Intern
-Mcu.Pin41=VP_SYS_VS_Systick
-Mcu.Pin5=PA0-WKUP
-Mcu.Pin6=PA1
-Mcu.Pin7=PA2
-Mcu.Pin8=PA3
-Mcu.Pin9=PA4
-Mcu.PinsNb=42
+Mcu.Pin40=VP_ADC1_Vref_Input
+Mcu.Pin41=VP_FATFS_VS_SDIO
+Mcu.Pin42=VP_RTC_VS_RTC_Activate
+Mcu.Pin43=VP_RTC_VS_RTC_Calendar
+Mcu.Pin44=VP_RTC_VS_RTC_Alarm_B_Intern
+Mcu.Pin45=VP_RTC_VS_RTC_Alarm_A_Intern
+Mcu.Pin46=VP_SYS_VS_Systick
+Mcu.Pin47=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin48=VP_TIM4_VS_no_output1
+Mcu.Pin49=VP_TIM5_VS_ClockSourceINT
+Mcu.Pin5=PC0
+Mcu.Pin50=VP_TIM9_VS_ClockSourceINT
+Mcu.Pin51=VP_TIM9_VS_no_output1
+Mcu.Pin6=PC1
+Mcu.Pin7=PC2
+Mcu.Pin8=PC3
+Mcu.Pin9=PA0-WKUP
+Mcu.PinsNb=52
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F401RCTx
@@ -164,13 +177,16 @@ NVIC.SDIO_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.SPI1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
+NVIC.TIM1_BRK_TIM9_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM4_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM5_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0-WKUP.GPIOParameters=GPIO_Label
-PA0-WKUP.GPIO_Label=Av3Ld
+PA0-WKUP.GPIO_Label=Av3Indicator
 PA0-WKUP.Locked=true
 PA0-WKUP.Signal=GPIO_Output
 PA1.GPIOParameters=GPIO_Label
-PA1.GPIO_Label=Av2Ld
+PA1.GPIO_Label=Av2Indicator
 PA1.Locked=true
 PA1.Signal=GPIO_Output
 PA13.GPIOParameters=GPIO_Label
@@ -188,7 +204,7 @@ PA15.GPIO_Label=SDIO_DET
 PA15.Locked=true
 PA15.Signal=GPIO_Input
 PA2.GPIOParameters=GPIO_Label
-PA2.GPIO_Label=Av1Ld
+PA2.GPIO_Label=Av1Indicator
 PA2.Locked=true
 PA2.Signal=GPIO_Output
 PA3.GPIOParameters=GPIO_Label
@@ -227,6 +243,10 @@ PB1.GPIOParameters=GPIO_Label
 PB1.GPIO_Label=Av3
 PB1.Locked=true
 PB1.Signal=ADCx_IN9
+PB10.GPIOParameters=GPIO_Label
+PB10.GPIO_Label=Buzzer
+PB10.Locked=true
+PB10.Signal=GPIO_Output
 PB12.GPIOParameters=GPIO_Label
 PB12.GPIO_Label=ActDa
 PB12.Locked=true
@@ -240,7 +260,7 @@ PB14.GPIO_Label=ActCk
 PB14.Locked=true
 PB14.Signal=GPIO_Output
 PB15.GPIOParameters=GPIO_Label
-PB15.GPIO_Label=ActLd
+PB15.GPIO_Label=ActInd
 PB15.Locked=true
 PB15.Signal=GPIO_Output
 PB2.GPIOParameters=GPIO_Label
@@ -258,6 +278,14 @@ PB6.Signal=I2C1_SCL
 PB7.Locked=true
 PB7.Mode=I2C
 PB7.Signal=I2C1_SDA
+PC0.GPIOParameters=GPIO_Label
+PC0.GPIO_Label=ErrorInd
+PC0.Locked=true
+PC0.Signal=GPIO_Output
+PC1.GPIOParameters=GPIO_Label
+PC1.GPIO_Label=WarnInd
+PC1.Locked=true
+PC1.Signal=GPIO_Output
 PC10.Mode=SD_4_bits_Wide_bus
 PC10.Signal=SDIO_D2
 PC11.Mode=SD_4_bits_Wide_bus
@@ -279,6 +307,14 @@ PC15-OSC32_OUT.GPIO_Label=LSEout
 PC15-OSC32_OUT.Locked=true
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
+PC2.GPIOParameters=GPIO_Label
+PC2.GPIO_Label=InfoInd
+PC2.Locked=true
+PC2.Signal=GPIO_Output
+PC3.GPIOParameters=GPIO_Label
+PC3.GPIO_Label=SdioInd
+PC3.Locked=true
+PC3.Signal=GPIO_Output
 PC5.GPIOParameters=GPIO_Label
 PC5.GPIO_Label=Av1
 PC5.Locked=true
@@ -330,7 +366,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_RTC_Init-RTC-false-HAL-true,5-MX_ADC1_Init-ADC1-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true,7-MX_SDIO_SD_Init-SDIO-false-HAL-true,8-MX_FATFS_Init-FATFS-false-HAL-false,9-MX_SPI1_Init-SPI1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_RTC_Init-RTC-false-HAL-true,5-MX_ADC1_Init-ADC1-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true,7-MX_SDIO_SD_Init-SDIO-false-HAL-true,8-MX_FATFS_Init-FATFS-false-HAL-false,9-MX_SPI1_Init-SPI1-false-HAL-true,10-MX_TIM4_Init-TIM4-false-HAL-true,11-MX_TIM5_Init-TIM5-false-HAL-true,12-MX_TIM9_Init-TIM9-false-HAL-true
 RCC.48MHZClocksFreq_Value=42000000
 RCC.AHBFreq_Value=84000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -381,6 +417,24 @@ SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
+TIM4.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM4.Channel-Output\ Compare1\ No\ Output=TIM_CHANNEL_1
+TIM4.IPParameters=Prescaler,Period,AutoReloadPreload,Channel-Output Compare1 No Output,OCMode_1,Pulse-Output Compare1 No Output
+TIM4.OCMode_1=TIM_OCMODE_TOGGLE
+TIM4.Period=1000 - 1
+TIM4.Prescaler=8400 - 1
+TIM4.Pulse-Output\ Compare1\ No\ Output=1000-1
+TIM5.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM5.IPParameters=Prescaler,Period,AutoReloadPreload
+TIM5.Period=100000 - 1
+TIM5.Prescaler=8400 - 1
+TIM9.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM9.Channel-Output\ Compare1\ No\ Output=TIM_CHANNEL_1
+TIM9.IPParameters=Prescaler,Period,Channel-Output Compare1 No Output,Pulse-Output Compare1 No Output,OCMode_1,AutoReloadPreload
+TIM9.OCMode_1=TIM_OCMODE_TOGGLE
+TIM9.Period=10000 - 1
+TIM9.Prescaler=8400 - 1
+TIM9.Pulse-Output\ Compare1\ No\ Output=10000 - 1
 VP_ADC1_TempSens_Input.Mode=IN-TempSens
 VP_ADC1_TempSens_Input.Signal=ADC1_TempSens_Input
 VP_ADC1_Vref_Input.Mode=IN-Vrefint
@@ -397,5 +451,15 @@ VP_RTC_VS_RTC_Calendar.Mode=RTC_Calendar
 VP_RTC_VS_RTC_Calendar.Signal=RTC_VS_RTC_Calendar
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM4_VS_ClockSourceINT.Mode=Internal
+VP_TIM4_VS_ClockSourceINT.Signal=TIM4_VS_ClockSourceINT
+VP_TIM4_VS_no_output1.Mode=Output Compare1 No Output
+VP_TIM4_VS_no_output1.Signal=TIM4_VS_no_output1
+VP_TIM5_VS_ClockSourceINT.Mode=Internal
+VP_TIM5_VS_ClockSourceINT.Signal=TIM5_VS_ClockSourceINT
+VP_TIM9_VS_ClockSourceINT.Mode=Internal
+VP_TIM9_VS_ClockSourceINT.Signal=TIM9_VS_ClockSourceINT
+VP_TIM9_VS_no_output1.Mode=Output Compare1 No Output
+VP_TIM9_VS_no_output1.Signal=TIM9_VS_no_output1
 board=custom
 isbadioc=false
