[HORUS] Other Perphirals

--- a/horus/horus-fw.ioc
+++ b/horus/horus-fw.ioc
@@ -27,7 +27,7 @@ CAD.pinconfig=
 CAD.provider=
 Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.ADC1.0.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.ADC1.0.Instance=DMA2_Stream0
+Dma.ADC1.0.Instance=DMA2_Stream4
 Dma.ADC1.0.MemDataAlignment=DMA_MDATAALIGN_WORD
 Dma.ADC1.0.MemInc=DMA_MINC_ENABLE
 Dma.ADC1.0.Mode=DMA_CIRCULAR
@@ -36,35 +36,65 @@ Dma.ADC1.0.PeriphInc=DMA_PINC_DISABLE
 Dma.ADC1.0.Priority=DMA_PRIORITY_LOW
 Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 Dma.Request0=ADC1
-Dma.Request1=SDIO_RX
-Dma.Request2=SDIO_TX
-Dma.RequestsNb=3
-Dma.SDIO_RX.1.Direction=DMA_PERIPH_TO_MEMORY
-Dma.SDIO_RX.1.FIFOMode=DMA_FIFOMODE_ENABLE
-Dma.SDIO_RX.1.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
-Dma.SDIO_RX.1.Instance=DMA2_Stream3
-Dma.SDIO_RX.1.MemBurst=DMA_MBURST_INC4
-Dma.SDIO_RX.1.MemDataAlignment=DMA_MDATAALIGN_WORD
-Dma.SDIO_RX.1.MemInc=DMA_MINC_ENABLE
-Dma.SDIO_RX.1.Mode=DMA_PFCTRL
-Dma.SDIO_RX.1.PeriphBurst=DMA_PBURST_INC4
-Dma.SDIO_RX.1.PeriphDataAlignment=DMA_PDATAALIGN_WORD
-Dma.SDIO_RX.1.PeriphInc=DMA_PINC_DISABLE
-Dma.SDIO_RX.1.Priority=DMA_PRIORITY_LOW
-Dma.SDIO_RX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
-Dma.SDIO_TX.2.Direction=DMA_MEMORY_TO_PERIPH
-Dma.SDIO_TX.2.FIFOMode=DMA_FIFOMODE_ENABLE
-Dma.SDIO_TX.2.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
-Dma.SDIO_TX.2.Instance=DMA2_Stream6
-Dma.SDIO_TX.2.MemBurst=DMA_MBURST_INC4
-Dma.SDIO_TX.2.MemDataAlignment=DMA_MDATAALIGN_WORD
-Dma.SDIO_TX.2.MemInc=DMA_MINC_ENABLE
-Dma.SDIO_TX.2.Mode=DMA_PFCTRL
-Dma.SDIO_TX.2.PeriphBurst=DMA_PBURST_INC4
-Dma.SDIO_TX.2.PeriphDataAlignment=DMA_PDATAALIGN_WORD
-Dma.SDIO_TX.2.PeriphInc=DMA_PINC_DISABLE
-Dma.SDIO_TX.2.Priority=DMA_PRIORITY_LOW
-Dma.SDIO_TX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
+Dma.Request1=SDIO
+Dma.Request2=USART1_RX
+Dma.Request3=USART1_TX
+Dma.Request4=USART6_RX
+Dma.Request5=USART6_TX
+Dma.RequestsNb=6
+Dma.SDIO.1.Direction=DMA_PERIPH_TO_MEMORY
+Dma.SDIO.1.FIFOMode=DMA_FIFOMODE_ENABLE
+Dma.SDIO.1.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
+Dma.SDIO.1.Instance=DMA2_Stream3
+Dma.SDIO.1.MemBurst=DMA_MBURST_INC4
+Dma.SDIO.1.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.SDIO.1.MemInc=DMA_MINC_ENABLE
+Dma.SDIO.1.Mode=DMA_PFCTRL
+Dma.SDIO.1.PeriphBurst=DMA_PBURST_INC4
+Dma.SDIO.1.PeriphDataAlignment=DMA_PDATAALIGN_WORD
+Dma.SDIO.1.PeriphInc=DMA_PINC_DISABLE
+Dma.SDIO.1.Priority=DMA_PRIORITY_LOW
+Dma.SDIO.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
+Dma.USART1_RX.2.Direction=DMA_PERIPH_TO_MEMORY
+Dma.USART1_RX.2.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART1_RX.2.Instance=DMA2_Stream2
+Dma.USART1_RX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART1_RX.2.MemInc=DMA_MINC_ENABLE
+Dma.USART1_RX.2.Mode=DMA_NORMAL
+Dma.USART1_RX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART1_RX.2.PeriphInc=DMA_PINC_DISABLE
+Dma.USART1_RX.2.Priority=DMA_PRIORITY_LOW
+Dma.USART1_RX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.USART1_TX.3.Direction=DMA_MEMORY_TO_PERIPH
+Dma.USART1_TX.3.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART1_TX.3.Instance=DMA2_Stream7
+Dma.USART1_TX.3.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART1_TX.3.MemInc=DMA_MINC_ENABLE
+Dma.USART1_TX.3.Mode=DMA_CIRCULAR
+Dma.USART1_TX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART1_TX.3.PeriphInc=DMA_PINC_DISABLE
+Dma.USART1_TX.3.Priority=DMA_PRIORITY_LOW
+Dma.USART1_TX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.USART6_RX.4.Direction=DMA_PERIPH_TO_MEMORY
+Dma.USART6_RX.4.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART6_RX.4.Instance=DMA2_Stream1
+Dma.USART6_RX.4.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART6_RX.4.MemInc=DMA_MINC_ENABLE
+Dma.USART6_RX.4.Mode=DMA_NORMAL
+Dma.USART6_RX.4.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART6_RX.4.PeriphInc=DMA_PINC_DISABLE
+Dma.USART6_RX.4.Priority=DMA_PRIORITY_LOW
+Dma.USART6_RX.4.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.USART6_TX.5.Direction=DMA_MEMORY_TO_PERIPH
+Dma.USART6_TX.5.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART6_TX.5.Instance=DMA2_Stream6
+Dma.USART6_TX.5.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART6_TX.5.MemInc=DMA_MINC_ENABLE
+Dma.USART6_TX.5.Mode=DMA_CIRCULAR
+Dma.USART6_TX.5.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART6_TX.5.PeriphInc=DMA_PINC_DISABLE
+Dma.USART6_TX.5.Priority=DMA_PRIORITY_LOW
+Dma.USART6_TX.5.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 FATFS.BSP.number=1
 FATFS.IPParameters=USE_DMA_CODE_SD,_USE_LFN,_USE_LABEL,_USE_EXPAND,_USE_FIND,_MAX_SS,_FS_EXFAT
 FATFS.USE_DMA_CODE_SD=1
@@ -90,9 +120,12 @@ Mcu.CPN=STM32F401RCT6
 Mcu.Family=STM32F4
 Mcu.IP0=ADC1
 Mcu.IP1=DMA
-Mcu.IP10=TIM4
-Mcu.IP11=TIM5
-Mcu.IP12=TIM9
+Mcu.IP10=TIM3
+Mcu.IP11=TIM4
+Mcu.IP12=TIM5
+Mcu.IP13=TIM9
+Mcu.IP14=USART1
+Mcu.IP15=USART6
 Mcu.IP2=FATFS
 Mcu.IP3=I2C1
 Mcu.IP4=NVIC
@@ -101,7 +134,7 @@ Mcu.IP6=RTC
 Mcu.IP7=SDIO
 Mcu.IP8=SPI1
 Mcu.IP9=SYS
-Mcu.IPNb=13
+Mcu.IPNb=16
 Mcu.Name=STM32F401R(B-C)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
@@ -113,59 +146,72 @@ Mcu.Pin13=PA4
 Mcu.Pin14=PA5
 Mcu.Pin15=PA6
 Mcu.Pin16=PA7
-Mcu.Pin17=PC5
-Mcu.Pin18=PB0
-Mcu.Pin19=PB1
+Mcu.Pin17=PC4
+Mcu.Pin18=PC5
+Mcu.Pin19=PB0
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=PB2
-Mcu.Pin21=PB10
-Mcu.Pin22=PB12
-Mcu.Pin23=PB13
-Mcu.Pin24=PB14
-Mcu.Pin25=PB15
-Mcu.Pin26=PC8
-Mcu.Pin27=PC9
-Mcu.Pin28=PA8
-Mcu.Pin29=PA13
+Mcu.Pin20=PB1
+Mcu.Pin21=PB2
+Mcu.Pin22=PB10
+Mcu.Pin23=PB12
+Mcu.Pin24=PB13
+Mcu.Pin25=PB14
+Mcu.Pin26=PB15
+Mcu.Pin27=PC6
+Mcu.Pin28=PC7
+Mcu.Pin29=PC8
 Mcu.Pin3=PH0 - OSC_IN
-Mcu.Pin30=PA14
-Mcu.Pin31=PA15
-Mcu.Pin32=PC10
-Mcu.Pin33=PC11
-Mcu.Pin34=PC12
-Mcu.Pin35=PD2
-Mcu.Pin36=PB3
-Mcu.Pin37=PB6
-Mcu.Pin38=PB7
-Mcu.Pin39=VP_ADC1_TempSens_Input
+Mcu.Pin30=PC9
+Mcu.Pin31=PA8
+Mcu.Pin32=PA9
+Mcu.Pin33=PA10
+Mcu.Pin34=PA13
+Mcu.Pin35=PA14
+Mcu.Pin36=PA15
+Mcu.Pin37=PC10
+Mcu.Pin38=PC11
+Mcu.Pin39=PC12
 Mcu.Pin4=PH1 - OSC_OUT
-Mcu.Pin40=VP_ADC1_Vref_Input
-Mcu.Pin41=VP_FATFS_VS_SDIO
-Mcu.Pin42=VP_RTC_VS_RTC_Activate
-Mcu.Pin43=VP_RTC_VS_RTC_Calendar
-Mcu.Pin44=VP_RTC_VS_RTC_Alarm_B_Intern
-Mcu.Pin45=VP_RTC_VS_RTC_Alarm_A_Intern
-Mcu.Pin46=VP_SYS_VS_Systick
-Mcu.Pin47=VP_TIM4_VS_ClockSourceINT
-Mcu.Pin48=VP_TIM4_VS_no_output1
-Mcu.Pin49=VP_TIM5_VS_ClockSourceINT
+Mcu.Pin40=PD2
+Mcu.Pin41=PB3
+Mcu.Pin42=PB4
+Mcu.Pin43=PB5
+Mcu.Pin44=PB6
+Mcu.Pin45=PB7
+Mcu.Pin46=PB8
+Mcu.Pin47=PB9
+Mcu.Pin48=VP_ADC1_TempSens_Input
+Mcu.Pin49=VP_ADC1_Vref_Input
 Mcu.Pin5=PC0
-Mcu.Pin50=VP_TIM9_VS_ClockSourceINT
-Mcu.Pin51=VP_TIM9_VS_no_output1
+Mcu.Pin50=VP_FATFS_VS_SDIO
+Mcu.Pin51=VP_RTC_VS_RTC_Activate
+Mcu.Pin52=VP_RTC_VS_RTC_Calendar
+Mcu.Pin53=VP_RTC_VS_RTC_Alarm_B_Intern
+Mcu.Pin54=VP_RTC_VS_RTC_Alarm_A_Intern
+Mcu.Pin55=VP_SYS_VS_Systick
+Mcu.Pin56=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin57=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin58=VP_TIM4_VS_no_output1
+Mcu.Pin59=VP_TIM5_VS_ClockSourceINT
 Mcu.Pin6=PC1
+Mcu.Pin60=VP_TIM9_VS_ClockSourceINT
+Mcu.Pin61=VP_TIM9_VS_no_output1
 Mcu.Pin7=PC2
 Mcu.Pin8=PC3
 Mcu.Pin9=PA0-WKUP
-Mcu.PinsNb=52
+Mcu.PinsNb=62
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F401RCTx
 MxCube.Version=6.12.0
 MxDb.Version=DB.6.0.120
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.DMA2_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DMA2_Stream1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DMA2_Stream2_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DMA2_Stream3_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DMA2_Stream4_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DMA2_Stream6_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DMA2_Stream7_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -180,6 +226,8 @@ NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.TIM1_BRK_TIM9_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TIM4_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TIM5_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.USART6_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0-WKUP.GPIOParameters=GPIO_Label
 PA0-WKUP.GPIO_Label=Av3Indicator
@@ -189,6 +237,8 @@ PA1.GPIOParameters=GPIO_Label
 PA1.GPIO_Label=Av2Indicator
 PA1.Locked=true
 PA1.Signal=GPIO_Output
+PA10.Mode=Asynchronous
+PA10.Signal=USART1_RX
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=SWDio
 PA13.Locked=true
@@ -235,6 +285,8 @@ PA8.GPIO_Label=MCO
 PA8.Locked=true
 PA8.Mode=Clock-out-1
 PA8.Signal=RCC_MCO_1
+PA9.Mode=Asynchronous
+PA9.Signal=USART1_TX
 PB0.GPIOParameters=GPIO_Label
 PB0.GPIO_Label=Av2
 PB0.Locked=true
@@ -272,12 +324,20 @@ PB3.GPIO_Label=SWO
 PB3.Locked=true
 PB3.Mode=Trace_Asynchronous_SW
 PB3.Signal=SYS_JTDO-SWO
+PB4.Locked=true
+PB4.Signal=S_TIM3_CH1
+PB5.Locked=true
+PB5.Signal=EVENTOUT
 PB6.Locked=true
 PB6.Mode=I2C
 PB6.Signal=I2C1_SCL
 PB7.Locked=true
 PB7.Mode=I2C
 PB7.Signal=I2C1_SDA
+PB8.Locked=true
+PB8.Signal=S_TIM10_CH1
+PB9.Locked=true
+PB9.Signal=S_TIM11_CH1
 PC0.GPIOParameters=GPIO_Label
 PC0.GPIO_Label=ErrorInd
 PC0.Locked=true
@@ -315,10 +375,18 @@ PC3.GPIOParameters=GPIO_Label
 PC3.GPIO_Label=SdioInd
 PC3.Locked=true
 PC3.Signal=GPIO_Output
+PC4.GPIOParameters=GPIO_Label
+PC4.GPIO_Label=EepromMemOrg
+PC4.Locked=true
+PC4.Signal=GPIO_Output
 PC5.GPIOParameters=GPIO_Label
 PC5.GPIO_Label=Av1
 PC5.Locked=true
 PC5.Signal=ADCx_IN15
+PC6.Mode=Asynchronous
+PC6.Signal=USART6_TX
+PC7.Mode=Asynchronous
+PC7.Signal=USART6_RX
 PC8.Mode=SD_4_bits_Wide_bus
 PC8.Signal=SDIO_D0
 PC9.Mode=SD_4_bits_Wide_bus
@@ -366,7 +434,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_RTC_Init-RTC-false-HAL-true,5-MX_ADC1_Init-ADC1-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true,7-MX_SDIO_SD_Init-SDIO-false-HAL-true,8-MX_FATFS_Init-FATFS-false-HAL-false,9-MX_SPI1_Init-SPI1-false-HAL-true,10-MX_TIM4_Init-TIM4-false-HAL-true,11-MX_TIM5_Init-TIM5-false-HAL-true,12-MX_TIM9_Init-TIM9-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_RTC_Init-RTC-false-HAL-true,5-MX_ADC1_Init-ADC1-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true,7-MX_SDIO_SD_Init-SDIO-false-HAL-true,8-MX_FATFS_Init-FATFS-false-HAL-false,9-MX_SPI1_Init-SPI1-false-HAL-true,10-MX_TIM4_Init-TIM4-false-HAL-true,11-MX_TIM5_Init-TIM5-false-HAL-true,12-MX_TIM9_Init-TIM9-false-HAL-true,13-MX_USART1_UART_Init-USART1-false-HAL-true,14-MX_USART6_UART_Init-USART6-false-HAL-true
 RCC.48MHZClocksFreq_Value=42000000
 RCC.AHBFreq_Value=84000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -410,6 +478,12 @@ SH.ADCx_IN8.0=ADC1_IN8,IN8
 SH.ADCx_IN8.ConfNb=1
 SH.ADCx_IN9.0=ADC1_IN9,IN9
 SH.ADCx_IN9.ConfNb=1
+SH.S_TIM10_CH1.0=TIM10_CH1
+SH.S_TIM10_CH1.ConfNb=1
+SH.S_TIM11_CH1.0=TIM11_CH1
+SH.S_TIM11_CH1.ConfNb=1
+SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
+SH.S_TIM3_CH1.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_256
 SPI1.CalculateBaudRate=328.125 KBits/s
 SPI1.DataSize=SPI_DATASIZE_8BIT
@@ -417,6 +491,11 @@ SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
+TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM3.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period,AutoReloadPreload
+TIM3.Period=1000 - 1
+TIM3.Prescaler=84 - 1
 TIM4.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM4.Channel-Output\ Compare1\ No\ Output=TIM_CHANNEL_1
 TIM4.IPParameters=Prescaler,Period,AutoReloadPreload,Channel-Output Compare1 No Output,OCMode_1,Pulse-Output Compare1 No Output
@@ -435,6 +514,10 @@ TIM9.OCMode_1=TIM_OCMODE_TOGGLE
 TIM9.Period=10000 - 1
 TIM9.Prescaler=8400 - 1
 TIM9.Pulse-Output\ Compare1\ No\ Output=10000 - 1
+USART1.IPParameters=VirtualMode
+USART1.VirtualMode=VM_ASYNC
+USART6.IPParameters=VirtualMode
+USART6.VirtualMode=VM_ASYNC
 VP_ADC1_TempSens_Input.Mode=IN-TempSens
 VP_ADC1_TempSens_Input.Signal=ADC1_TempSens_Input
 VP_ADC1_Vref_Input.Mode=IN-Vrefint
@@ -451,6 +534,8 @@ VP_RTC_VS_RTC_Calendar.Mode=RTC_Calendar
 VP_RTC_VS_RTC_Calendar.Signal=RTC_VS_RTC_Calendar
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM3_VS_ClockSourceINT.Mode=Internal
+VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 VP_TIM4_VS_ClockSourceINT.Mode=Internal
 VP_TIM4_VS_ClockSourceINT.Signal=TIM4_VS_ClockSourceINT
 VP_TIM4_VS_no_output1.Mode=Output Compare1 No Output
