--- a/horus/horus-fw.ioc
+++ b/horus/horus-fw.ioc
@@ -22,8 +22,8 @@ ADC1.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_56CYCLES
 ADC1.SamplingTime-3\#ChannelRegularConversion=ADC_SAMPLETIME_56CYCLES
 ADC1.SamplingTime-5\#ChannelRegularConversion=ADC_SAMPLETIME_56CYCLES
 ADC1.master=1
-CAD.formats=
-CAD.pinconfig=
+CAD.formats=[]
+CAD.pinconfig=Dual
 CAD.provider=
 Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.ADC1.0.FIFOMode=DMA_FIFOMODE_DISABLE
@@ -124,8 +124,12 @@ Mcu.IP10=TIM3
 Mcu.IP11=TIM4
 Mcu.IP12=TIM5
 Mcu.IP13=TIM9
-Mcu.IP14=USART1
-Mcu.IP15=USART6
+Mcu.IP14=TIM10
+Mcu.IP15=TIM11
+Mcu.IP16=USART1
+Mcu.IP17=USART6
+Mcu.IP18=USB_DEVICE
+Mcu.IP19=USB_OTG_FS
 Mcu.IP2=FATFS
 Mcu.IP3=I2C1
 Mcu.IP4=NVIC
@@ -134,7 +138,7 @@ Mcu.IP6=RTC
 Mcu.IP7=SDIO
 Mcu.IP8=SPI1
 Mcu.IP9=SYS
-Mcu.IPNb=16
+Mcu.IPNb=20
 Mcu.Name=STM32F401R(B-C)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
@@ -165,41 +169,46 @@ Mcu.Pin30=PC9
 Mcu.Pin31=PA8
 Mcu.Pin32=PA9
 Mcu.Pin33=PA10
-Mcu.Pin34=PA13
-Mcu.Pin35=PA14
-Mcu.Pin36=PA15
-Mcu.Pin37=PC10
-Mcu.Pin38=PC11
-Mcu.Pin39=PC12
+Mcu.Pin34=PA11
+Mcu.Pin35=PA12
+Mcu.Pin36=PA13
+Mcu.Pin37=PA14
+Mcu.Pin38=PA15
+Mcu.Pin39=PC10
 Mcu.Pin4=PH1 - OSC_OUT
-Mcu.Pin40=PD2
-Mcu.Pin41=PB3
-Mcu.Pin42=PB4
-Mcu.Pin43=PB5
-Mcu.Pin44=PB6
-Mcu.Pin45=PB7
-Mcu.Pin46=PB8
-Mcu.Pin47=PB9
-Mcu.Pin48=VP_ADC1_TempSens_Input
-Mcu.Pin49=VP_ADC1_Vref_Input
+Mcu.Pin40=PC11
+Mcu.Pin41=PC12
+Mcu.Pin42=PD2
+Mcu.Pin43=PB3
+Mcu.Pin44=PB4
+Mcu.Pin45=PB5
+Mcu.Pin46=PB6
+Mcu.Pin47=PB7
+Mcu.Pin48=PB8
+Mcu.Pin49=PB9
 Mcu.Pin5=PC0
-Mcu.Pin50=VP_FATFS_VS_SDIO
-Mcu.Pin51=VP_RTC_VS_RTC_Activate
-Mcu.Pin52=VP_RTC_VS_RTC_Calendar
-Mcu.Pin53=VP_RTC_VS_RTC_Alarm_B_Intern
-Mcu.Pin54=VP_RTC_VS_RTC_Alarm_A_Intern
-Mcu.Pin55=VP_SYS_VS_Systick
-Mcu.Pin56=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin57=VP_TIM4_VS_ClockSourceINT
-Mcu.Pin58=VP_TIM4_VS_no_output1
-Mcu.Pin59=VP_TIM5_VS_ClockSourceINT
+Mcu.Pin50=VP_ADC1_TempSens_Input
+Mcu.Pin51=VP_ADC1_Vref_Input
+Mcu.Pin52=VP_FATFS_VS_SDIO
+Mcu.Pin53=VP_RTC_VS_RTC_Activate
+Mcu.Pin54=VP_RTC_VS_RTC_Calendar
+Mcu.Pin55=VP_RTC_VS_RTC_Alarm_B_Intern
+Mcu.Pin56=VP_RTC_VS_RTC_Alarm_A_Intern
+Mcu.Pin57=VP_SYS_VS_Systick
+Mcu.Pin58=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin59=VP_TIM4_VS_ClockSourceINT
 Mcu.Pin6=PC1
-Mcu.Pin60=VP_TIM9_VS_ClockSourceINT
-Mcu.Pin61=VP_TIM9_VS_no_output1
+Mcu.Pin60=VP_TIM4_VS_no_output1
+Mcu.Pin61=VP_TIM5_VS_ClockSourceINT
+Mcu.Pin62=VP_TIM9_VS_ClockSourceINT
+Mcu.Pin63=VP_TIM9_VS_no_output1
+Mcu.Pin64=VP_TIM10_VS_ClockSourceINT
+Mcu.Pin65=VP_TIM11_VS_ClockSourceINT
+Mcu.Pin66=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin7=PC2
 Mcu.Pin8=PC3
 Mcu.Pin9=PA0-WKUP
-Mcu.PinsNb=62
+Mcu.PinsNb=67
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F401RCTx
@@ -213,16 +222,21 @@ NVIC.DMA2_Stream4_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DMA2_Stream6_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DMA2_Stream7_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.FPU_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.OTG_FS_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
+NVIC.RCC_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:true
+NVIC.RTC_Alarm_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.SDIO_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.SPI1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
+NVIC.TAMP_STAMP_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TIM1_BRK_TIM9_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TIM4_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TIM5_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
@@ -237,8 +251,15 @@ PA1.GPIOParameters=GPIO_Label
 PA1.GPIO_Label=Av2Indicator
 PA1.Locked=true
 PA1.Signal=GPIO_Output
+PA10.Locked=true
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
+PA11.Locked=true
+PA11.Mode=Device_Only
+PA11.Signal=USB_OTG_FS_DM
+PA12.Locked=true
+PA12.Mode=Device_Only
+PA12.Signal=USB_OTG_FS_DP
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=SWDio
 PA13.Locked=true
@@ -285,6 +306,7 @@ PA8.GPIO_Label=MCO
 PA8.Locked=true
 PA8.Mode=Clock-out-1
 PA8.Signal=RCC_MCO_1
+PA9.Locked=true
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
 PB0.GPIOParameters=GPIO_Label
@@ -324,6 +346,8 @@ PB3.GPIO_Label=SWO
 PB3.Locked=true
 PB3.Mode=Trace_Asynchronous_SW
 PB3.Signal=SYS_JTDO-SWO
+PB4.GPIOParameters=GPIO_Label
+PB4.GPIO_Label=DisplayLedPWM
 PB4.Locked=true
 PB4.Signal=S_TIM3_CH1
 PB5.Locked=true
@@ -334,8 +358,12 @@ PB6.Signal=I2C1_SCL
 PB7.Locked=true
 PB7.Mode=I2C
 PB7.Signal=I2C1_SDA
+PB8.GPIOParameters=GPIO_Label
+PB8.GPIO_Label=Servo2Pwm
 PB8.Locked=true
 PB8.Signal=S_TIM10_CH1
+PB9.GPIOParameters=GPIO_Label
+PB9.GPIO_Label=Servo1PWM
 PB9.Locked=true
 PB9.Signal=S_TIM11_CH1
 PC0.GPIOParameters=GPIO_Label
@@ -346,10 +374,13 @@ PC1.GPIOParameters=GPIO_Label
 PC1.GPIO_Label=WarnInd
 PC1.Locked=true
 PC1.Signal=GPIO_Output
+PC10.Locked=true
 PC10.Mode=SD_4_bits_Wide_bus
 PC10.Signal=SDIO_D2
+PC11.Locked=true
 PC11.Mode=SD_4_bits_Wide_bus
 PC11.Signal=SDIO_D3
+PC12.Locked=true
 PC12.Mode=SD_4_bits_Wide_bus
 PC12.Signal=SDIO_CK
 PC13-ANTI_TAMP.GPIOParameters=GPIO_Label
@@ -383,14 +414,57 @@ PC5.GPIOParameters=GPIO_Label
 PC5.GPIO_Label=Av1
 PC5.Locked=true
 PC5.Signal=ADCx_IN15
+PC6.Locked=true
 PC6.Mode=Asynchronous
 PC6.Signal=USART6_TX
+PC7.Locked=true
 PC7.Mode=Asynchronous
 PC7.Signal=USART6_RX
+PC8.Locked=true
 PC8.Mode=SD_4_bits_Wide_bus
 PC8.Signal=SDIO_D0
+PC9.Locked=true
 PC9.Mode=SD_4_bits_Wide_bus
 PC9.Signal=SDIO_D1
+PCC.Checker=false
+PCC.Line=STM32F401
+PCC.MCU=STM32F401R(B-C)Tx
+PCC.PartNumber=STM32F401RCTx
+PCC.Seq0=2
+PCC.Seq0.Step0.Average_Current=21.2 mA
+PCC.Seq0.Step0.CPU_Frequency=84 MHz
+PCC.Seq0.Step0.Category=In DS Table
+PCC.Seq0.Step0.DMIPS=105.0
+PCC.Seq0.Step0.Duration=5 ms
+PCC.Seq0.Step0.Frequency=4 MHz
+PCC.Seq0.Step0.Memory=FLASH/ART/PREFETCH
+PCC.Seq0.Step0.Mode=RUN
+PCC.Seq0.Step0.Oscillator=HSE PLL
+PCC.Seq0.Step0.Peripherals=
+PCC.Seq0.Step0.TaMax=101.5
+PCC.Seq0.Step0.User's_Consumption=0 mA
+PCC.Seq0.Step0.Vcore=Scale2-Medium
+PCC.Seq0.Step0.Vdd=3.3
+PCC.Seq0.Step0.Voltage_Source=Battery
+PCC.Seq0.Step1.Average_Current=10 \u00B5A
+PCC.Seq0.Step1.CPU_Frequency=0 Hz
+PCC.Seq0.Step1.Category=In DS Table
+PCC.Seq0.Step1.DMIPS=0.0
+PCC.Seq0.Step1.Duration=5 ms
+PCC.Seq0.Step1.Frequency=0 Hz
+PCC.Seq0.Step1.Memory=n/a
+PCC.Seq0.Step1.Mode=STOP
+PCC.Seq0.Step1.Oscillator=Regulator_LPLV Flash-PwrDwn
+PCC.Seq0.Step1.Peripherals=
+PCC.Seq0.Step1.TaMax=105
+PCC.Seq0.Step1.User's_Consumption=0 mA
+PCC.Seq0.Step1.Vcore=No Scale
+PCC.Seq0.Step1.Vdd=3.3
+PCC.Seq0.Step1.Voltage_Source=Battery
+PCC.Series=STM32F4
+PCC.Temperature=25
+PCC.Vdd=3.3
+PD2.Locked=true
 PD2.Mode=SD_4_bits_Wide_bus
 PD2.Signal=SDIO_CMD
 PH0\ -\ OSC_IN.GPIOParameters=GPIO_Label
@@ -416,11 +490,12 @@ ProjectManager.DeviceId=STM32F401RCTx
 ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.28.0
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
-ProjectManager.HeapSize=0x400
+ProjectManager.HeapSize=0x800
 ProjectManager.KeepUserCode=true
 ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Core/Src
+ProjectManager.MultiThreaded=true
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
@@ -428,14 +503,15 @@ ProjectManager.ProjectFileName=horus-fw.ioc
 ProjectManager.ProjectName=horus-fw
 ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
-ProjectManager.StackSize=0x800
+ProjectManager.StackSize=0x1000
 ProjectManager.TargetToolchain=STM32CubeIDE
+ProjectManager.ThreadSafeStrategy=Cortex-M4NS\:Default,
 ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_RTC_Init-RTC-false-HAL-true,5-MX_ADC1_Init-ADC1-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true,7-MX_SDIO_SD_Init-SDIO-false-HAL-true,8-MX_FATFS_Init-FATFS-false-HAL-false,9-MX_SPI1_Init-SPI1-false-HAL-true,10-MX_TIM4_Init-TIM4-false-HAL-true,11-MX_TIM5_Init-TIM5-false-HAL-true,12-MX_TIM9_Init-TIM9-false-HAL-true,13-MX_USART1_UART_Init-USART1-false-HAL-true,14-MX_USART6_UART_Init-USART6-false-HAL-true
-RCC.48MHZClocksFreq_Value=42000000
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_RTC_Init-RTC-false-HAL-true,5-MX_ADC1_Init-ADC1-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true,7-MX_SDIO_SD_Init-SDIO-false-HAL-true,8-MX_FATFS_Init-FATFS-false-HAL-false,9-MX_SPI1_Init-SPI1-false-HAL-true,10-MX_TIM4_Init-TIM4-false-HAL-true,11-MX_TIM5_Init-TIM5-false-HAL-true,12-MX_TIM9_Init-TIM9-false-HAL-true,13-MX_USART1_UART_Init-USART1-false-HAL-true,14-MX_USART6_UART_Init-USART6-false-HAL-true,15-MX_TIM3_Init-TIM3-false-HAL-true,16-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false
+RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=84000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
 RCC.APB1Freq_Value=42000000
@@ -443,20 +519,21 @@ RCC.APB1TimFreq_Value=84000000
 RCC.APB2Freq_Value=84000000
 RCC.APB2TimFreq_Value=84000000
 RCC.CortexFreq_Value=84000000
-RCC.EnbaleCSS=true
 RCC.FCLKCortexFreq_Value=84000000
 RCC.HCLKFreq_Value=84000000
 RCC.HSE_VALUE=16000000
 RCC.HSI_VALUE=16000000
 RCC.I2SClocksFreq_Value=192000000
-RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EnbaleCSS,FCLKCortexFreq_Value,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,PLLSourceVirtual,RCC_MCO1Source,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
+RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSI_VALUE,MCO1PinFreq_Value,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLP,PLLQ,PLLQCLKFreq_Value,RCC_MCO1Source,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
 RCC.LSI_VALUE=32000
+RCC.MCO1PinFreq_Value=16000000
 RCC.MCO2PinFreq_Value=84000000
 RCC.PLLCLKFreq_Value=84000000
 RCC.PLLM=8
-RCC.PLLN=84
-RCC.PLLQCLKFreq_Value=42000000
-RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
+RCC.PLLN=168
+RCC.PLLP=RCC_PLLP_DIV4
+RCC.PLLQ=7
+RCC.PLLQCLKFreq_Value=48000000
 RCC.RCC_MCO1Source=RCC_MCO1SOURCE_HSE
 RCC.RTCFreq_Value=32000
 RCC.RTCHSEDivFreq_Value=8000000
@@ -464,7 +541,7 @@ RCC.SYSCLKFreq_VALUE=84000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.VCOI2SOutputFreq_Value=384000000
 RCC.VCOInputFreq_Value=2000000
-RCC.VCOOutputFreq_Value=168000000
+RCC.VCOOutputFreq_Value=336000000
 RCC.VcooutputI2S=192000000
 RTC.Alarm=RTC_ALARM_A
 RTC.Alarm_B=RTC_ALARM_B
@@ -478,9 +555,9 @@ SH.ADCx_IN8.0=ADC1_IN8,IN8
 SH.ADCx_IN8.ConfNb=1
 SH.ADCx_IN9.0=ADC1_IN9,IN9
 SH.ADCx_IN9.ConfNb=1
-SH.S_TIM10_CH1.0=TIM10_CH1
+SH.S_TIM10_CH1.0=TIM10_CH1,PWM Generation1 CH1
 SH.S_TIM10_CH1.ConfNb=1
-SH.S_TIM11_CH1.0=TIM11_CH1
+SH.S_TIM11_CH1.0=TIM11_CH1,PWM Generation1 CH1
 SH.S_TIM11_CH1.ConfNb=1
 SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
 SH.S_TIM3_CH1.ConfNb=1
@@ -491,6 +568,13 @@ SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
+TIM10.Channel=TIM_CHANNEL_1
+TIM10.IPParameters=Channel
+TIM11.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM11.Channel=TIM_CHANNEL_1
+TIM11.IPParameters=Channel,Prescaler,Period,AutoReloadPreload
+TIM11.Period=1000
+TIM11.Prescaler=84 - 1
 TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM3.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period,AutoReloadPreload
@@ -518,6 +602,16 @@ USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 USART6.IPParameters=VirtualMode
 USART6.VirtualMode=VM_ASYNC
+USB_DEVICE.CLASS_NAME_FS=CDC
+USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS,USBD_DEBUG_LEVEL,PID_CDC_FS,PRODUCT_STRING_CDC_FS
+USB_DEVICE.PID_CDC_FS=61858
+USB_DEVICE.PRODUCT_STRING_CDC_FS=VexUF Horus Serial
+USB_DEVICE.USBD_DEBUG_LEVEL=0
+USB_DEVICE.VirtualMode=Cdc
+USB_DEVICE.VirtualModeFS=Cdc_FS
+USB_OTG_FS.IPParameters=VirtualMode,Sof_enable
+USB_OTG_FS.Sof_enable=ENABLE
+USB_OTG_FS.VirtualMode=Device_Only
 VP_ADC1_TempSens_Input.Mode=IN-TempSens
 VP_ADC1_TempSens_Input.Signal=ADC1_TempSens_Input
 VP_ADC1_Vref_Input.Mode=IN-Vrefint
@@ -534,6 +628,10 @@ VP_RTC_VS_RTC_Calendar.Mode=RTC_Calendar
 VP_RTC_VS_RTC_Calendar.Signal=RTC_VS_RTC_Calendar
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM10_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM10_VS_ClockSourceINT.Signal=TIM10_VS_ClockSourceINT
+VP_TIM11_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM11_VS_ClockSourceINT.Signal=TIM11_VS_ClockSourceINT
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
 VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 VP_TIM4_VS_ClockSourceINT.Mode=Internal
@@ -546,5 +644,7 @@ VP_TIM9_VS_ClockSourceINT.Mode=Internal
 VP_TIM9_VS_ClockSourceINT.Signal=TIM9_VS_ClockSourceINT
 VP_TIM9_VS_no_output1.Mode=Output Compare1 No Output
 VP_TIM9_VS_no_output1.Signal=TIM9_VS_no_output1
+VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Mode=CDC_FS
+VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CDC_FS
 board=custom
 isbadioc=false
