[HORUS] TRIG to PWM

--- a/horus_fw/fw_src/horus-fw.ioc
+++ b/horus_fw/fw_src/horus-fw.ioc
@@ -352,6 +352,8 @@ PB3.Mode=Trace_Asynchronous_SW
 PB3.Signal=SYS_JTDO-SWO
 PB4.Locked=true
 PB4.Signal=GPIO_Output
+PB5.GPIOParameters=GPIO_Label
+PB5.GPIO_Label=LCD_pwm
 PB5.Locked=true
 PB5.Signal=S_TIM3_CH2
 PB6.Locked=true
@@ -580,14 +582,17 @@ SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
+TIM10.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
 TIM10.Channel=TIM_CHANNEL_1
-TIM10.IPParameters=Channel
-TIM11.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM10.IPParameters=Channel,Prescaler,Period,AutoReloadPreload
+TIM10.Period=1000 - 1
+TIM10.Prescaler=1680 - 1
+TIM11.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
 TIM11.Channel=TIM_CHANNEL_1
 TIM11.IPParameters=Channel,Prescaler,Period,AutoReloadPreload
-TIM11.Period=1000
-TIM11.Prescaler=84 - 1
-TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM11.Period=1000 - 1
+TIM11.Prescaler=1680 - 1
+TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
 TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM3.IPParameters=Prescaler,Period,AutoReloadPreload,Channel-PWM Generation2 CH2
 TIM3.Period=1000 - 1
