[HORUS] Handle SD Card insertion and Removal

--- a/horus_fw/fw_src/horus-fw.ioc
+++ b/horus_fw/fw_src/horus-fw.ioc
@@ -410,9 +410,10 @@ PC3.GPIOParameters=GPIO_Label
 PC3.GPIO_Label=SdioInd
 PC3.Locked=true
 PC3.Signal=GPIO_Output
-PC4.GPIOParameters=GPIO_Label
+PC4.GPIOParameters=PinState,GPIO_Label
 PC4.GPIO_Label=EepromMemOrg
 PC4.Locked=true
+PC4.PinState=GPIO_PIN_SET
 PC4.Signal=GPIO_Output
 PC5.GPIOParameters=GPIO_Label
 PC5.GPIO_Label=Av1
@@ -623,7 +624,7 @@ USB_DEVICE.CLASS_NAME_FS=CDC
 USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS,USBD_DEBUG_LEVEL,PID_CDC_FS,PRODUCT_STRING_CDC_FS,USBD_MAX_NUM_INTERFACES,USBD_MAX_NUM_CONFIGURATION,MANUFACTURER_STRING
 USB_DEVICE.MANUFACTURER_STRING=VexUF By Aly Badawy
 USB_DEVICE.PID_CDC_FS=61858
-USB_DEVICE.PRODUCT_STRING_CDC_FS=VexUF Horus Serial
+USB_DEVICE.PRODUCT_STRING_CDC_FS=VexUF\:Horus Serial Interface
 USB_DEVICE.USBD_DEBUG_LEVEL=0
 USB_DEVICE.USBD_MAX_NUM_CONFIGURATION=1
 USB_DEVICE.USBD_MAX_NUM_INTERFACES=1
