--- a/horus_fw/fw_src/horus-fw.ioc
+++ b/horus_fw/fw_src/horus-fw.ioc
@@ -350,7 +350,10 @@ PB3.GPIO_Label=SWO
 PB3.Locked=true
 PB3.Mode=Trace_Asynchronous_SW
 PB3.Signal=SYS_JTDO-SWO
+PB4.GPIOParameters=PinState,GPIO_Label
+PB4.GPIO_Label=TTL_LED
 PB4.Locked=true
+PB4.PinState=GPIO_PIN_SET
 PB4.Signal=GPIO_Output
 PB5.GPIOParameters=GPIO_Label
 PB5.GPIO_Label=LCD_pwm
