--- a/horus_fw/fw_src/horus-fw.ioc
+++ b/horus_fw/fw_src/horus-fw.ioc
@@ -619,7 +619,8 @@ TIM9.OCMode_1=TIM_OCMODE_TOGGLE
 TIM9.Period=10000 - 1
 TIM9.Prescaler=8400 - 1
 TIM9.Pulse-Output\ Compare1\ No\ Output=10000 - 1
-USART1.IPParameters=VirtualMode
+USART1.BaudRate=19200
+USART1.IPParameters=VirtualMode,BaudRate
 USART1.VirtualMode=VM_ASYNC
 USART6.IPParameters=VirtualMode
 USART6.VirtualMode=VM_ASYNC
